--- a/bootstrap/application-sets/addons-aws-load-balancer-controller-appset.yaml
+++ b/bootstrap/application-sets/addons-aws-load-balancer-controller-appset.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: addons-aws-cert-manager
+  name: addons-aws-load-balancer-controller
 spec:
   syncPolicy:
     preserveResourcesOnDeletion: true
@@ -12,32 +12,27 @@ spec:
         generators:
           - clusters:
               values:
-                addonChart: cert-manager
+                addonChart: aws-load-balancer-controller
                 # anything not staging or prod use this version
-                addonChartVersion: v1.14.3
-                addonChartRepository: https://charts.jetstack.io
+                addonChartVersion: 1.7.1
+                addonChartRepository: https://aws.github.io/eks-charts
               selector:
                 matchExpressions:
-                  - key: akuity.io/argo-cd-cluster-name
-                    operator: NotIn
-                    values: [in-cluster]
-                  - key: enable_cert_manager
+                  - key: enable_aws_load_balancer_controller
                     operator: In
                     values: ['true']
-                  - key: aws_cluster_name
-                    operator: Exists
           - clusters:
               selector:
                 matchLabels:
                   environment: staging
               values:
-                addonChartVersion: v1.14.3
+                addonChartVersion: 1.7.1
           - clusters:
               selector:
                 matchLabels:
                   environment: prod
               values:
-                addonChartVersion: v1.14.3
+                addonChartVersion: 1.7.1
   template:
     metadata:
       name: addon-{{name}}-{{values.addonChart}}
@@ -58,22 +53,27 @@ spec:
               - $values/{{metadata.annotations.addons_repo_basepath}}environments/{{metadata.labels.environment}}/addons/{{values.addonChart}}/values.yaml
               - $values/{{metadata.annotations.addons_repo_basepath}}clusters/{{name}}/addons/{{values.addonChart}}/values.yaml
             values: |
-              installCRDs: true
+              vpcId: '{{metadata.annotations.aws_vpc_id}}'
+              clusterName: {{metadata.annotations.aws_cluster_name}}
               serviceAccount:
-                name: {{metadata.annotations.cert_manager_service_account}}
+                name: {{metadata.annotations.aws_load_balancer_controller_service_account}}
                 annotations:
-                  eks.amazonaws.com/role-arn: {{metadata.annotations.cert_manager_iam_role_arn}}
-          # fileParameters:
-          #  - name:
-          #    path:
-          # parameters
-          # values
-          # valuesObject
+                  eks.amazonaws.com/role-arn: {{metadata.annotations.aws_load_balancer_controller_iam_role_arn}}
       destination:
-        namespace: '{{metadata.annotations.cert_manager_namespace}}'
+        namespace: '{{metadata.annotations.aws_load_balancer_controller_namespace}}'
         name: '{{name}}'
       syncPolicy:
         automated: {}
         syncOptions:
           - CreateNamespace=true
           - ServerSideApply=true  # Big CRDs.
+      ignoreDifferences:
+        - kind: Secret
+          name: aws-load-balancer-tls
+          jsonPointers: [/data]
+        - group: admissionregistration.k8s.io
+          kind: MutatingWebhookConfiguration
+          jqPathExpressions: ['.webhooks[].clientConfig.caBundle']
+        - group: admissionregistration.k8s.io
+          kind: ValidatingWebhookConfiguration
+          jqPathExpressions: ['.webhooks[].clientConfig.caBundle']
